fix resume date layout on mobile

--- a/_styles/resume.scss
+++ b/_styles/resume.scss
@@ -32,7 +32,8 @@
         time {
           color: darken(white, 20);
           float: left;
-          font-style: italic
+          font-style: italic;
+          max-width: 20%;
         }
         h3 {
           font-weight: bold;
